# sn-mdm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/napi/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
crates/napi/src/: bindings.rs  error.rs  lib.rs  types.rs
crates/napi/test/: smoke.test.mjs
crates/pack_core/: Cargo.toml
crates/pack_core/src/: error.rs  export.rs  ingest.rs  lib.rs  metadata.rs  schema.rs  search.rs
crawl/: __init__.py  crawl_config.toml  pipeline.py  pyproject.toml  requirements.txt
crawl/crawlers/: __init__.py  _browser.py  _jsonld.py  a16z.py  acquired.py  base.py  bcg.py  deutsche_bank.py  exit_five.py  frog.py  imd.py  masters_of_scale.py  mckinsey.py  microsoft_cyber.py  ncsc.py  people_matters.py  rbc_disruptors.py  rics.py  ted_worklife.py  thomson_reuters.py  wef_radio_davos.py
crawl/tests/: test_chunker.py  test_config.py  test_dedup_extraction.py  test_headless_crawlers.py  test_html_crawlers.py  test_pipeline.py
docs/: ARCHITECTURE.md  SOURCES.md
packs/chunks/: a16z.jsonl  bcg.jsonl  deutsche_bank.jsonl  frog.jsonl  imd.jsonl  masters_of_scale.jsonl  microsoft_cyber.jsonl  ncsc.jsonl  people_matters.jsonl  rbc_disruptors.jsonl  ted_worklife.jsonl  thomson_reuters.jsonl  wef_radio_davos.jsonl
packs/governance/: rights_log.jsonl
packs/metadata/: a16z.jsonl  acquired.jsonl  bcg.jsonl  deutsche_bank.jsonl  exit_five.jsonl  frog.jsonl  imd.jsonl  masters_of_scale.jsonl  microsoft_cyber.jsonl  ncsc.jsonl  people_matters.jsonl  rbc_disruptors.jsonl  ted_worklife.jsonl  thomson_reuters.jsonl  wef_radio_davos.jsonl
