[workspace]
resolver = "2"
members = [
    "crates/pack_core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kennguy3n/sn-mdm"

[workspace.dependencies]
# Errors
thiserror = "1"
anyhow = "1"

# IDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Hashing (BLAKE3 content-hash dedup — mirrors knowledge's evidence_store)
blake3 = "1"

# Storage: SQLCipher with bundled vendored OpenSSL (mirrors knowledge + chat-storage-search)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "blob"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression for pack export
zstd = { version = "0.13", default-features = false }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# Tests
tempfile = "3"
