[package]
name = "pack_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pack format, SQLCipher+FTS5 index, multi-lane search, and compact .pack export for sn-mdm content packs."

[[bin]]
name = "pack-build"
path = "src/bin/pack_build.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
blake3.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
chrono.workspace = true
tempfile.workspace = true
